v0.5.7, <RELEASE DATE HERE>:

* Added a new error message for if multiple BuildConfigs have an empty name.
* Fixed input file path sometimes getting corrupted.

----------------------------------------------------------------

v0.5.6, 02/02/2025:

* Fixed temp storage overflows which caused Builder to crash.
* Fixed builds incorrectly being skipped if an old version of the binary with the same name existed.

----------------------------------------------------------------

v0.5.5, 21/01/2025:

* Builder now serializes it's version number into all .build_info files.
	* This is to detect whether or not we need to rebuild between new versions of builder.
	* As a result of this, all old .build_info files are out of date and will need to be deleted before using this version.
* Fixed Visual Studio filters not showing all the files in their correct folder/subfolder.

----------------------------------------------------------------

v0.5.4, 17/01/2025:

* Fixed builds getting skipped if Builder can't find the .build_info file or if the expected .build_info file name changes.
* Fixed path from Visual Studio solution to Builder being null if the input file didn't also contain a path.

----------------------------------------------------------------

v0.5.3, 07/01/2025:

* Builder now officially ships under the MIT license.
	* I forgot to change the license when I made Builder publicly available - whoops!

----------------------------------------------------------------

v0.5.2, 05/01/2025:

* Fixed a crash when sometimes trying to generate a .sln file.
* Fixed a crash when sometimes trying to build from Visual Studio.
* Fixed the binary folder being called "null" when the build source file doesn't contain a path.
* Fixed "default" build config not getting written to .build_info file in a default build.
* Fixed source files sometimes not getting resolved when the build source file contains a path.