@@ -31,6 +31,8 @@ SOFTWARE.
 #include "core_types.h"
 #include "memory_units.h"
 
+struct Allocator;
+
 /*
 ================================================================================================
 
