@@ -1,13 +1,43 @@
+/*
+===========================================================================
+
+Core
+
+Copyright (c) 2025 Dan Moody
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+
+===========================================================================
+*/
+
+#ifdef CORE_MEMORY_TRACKING
+
 #include <memory_tracking.h>
+
 #include <hashmap.h>
 #include <allocation_context.h>
 #include <debug.h>
 #include <array.inl>
+#include <typecast.inl>
 
 #include <new.h>
 #include <malloc.h>
-
-#ifdef CORE_MEMORY_TRACKING
 
 ScopedFlags::ScopedFlags( u32 new_flags, u32 remove_flags ) {
 	assertf( ( new_flags & remove_flags ) == 0, "Can't both add and remove flags" );
