@@ -29,10 +29,12 @@ SOFTWARE.
 #ifdef _WIN64
 
 #include <file.h>
+
 #include <debug.h>
 #include <allocation_context.h>
 #include <defer.h>
 #include <temp_storage.h>
+#include <typecast.inl>
 
 #define WIN32_LEAN_AND_MEAN
 #include <Windows.h>
