@@ -29,7 +29,9 @@ SOFTWARE.
 #ifdef _WIN64
 
 #include <library.h>
+
 #include <debug.h>
+#include <typecast.inl>
 
 #define WIN32_LEAN_AND_MEAN
 #include <Windows.h>
